# esp32-holiday-tree

./: .gitignore  CMakeLists.txt  README.md  esp_idf_project_configuration.json  sdkconfig.debug  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.devboard  sdkconfig.release  sdkconfig.smartbutton
.devcontainer/: Dockerfile  devcontainer.json
main/: CMakeLists.txt  Kconfig.projbuild  compile_options.h  idf_component.yml  main.c
main/bt/: a2d_sbc_constants.h  bt_a2d.c  bt_a2d.h  bt_avrc.c  bt_avrc.h  bt_avrc_controller.c  bt_avrc_controller.h  bt_avrc_target.c  bt_avrc_target.h  bt_avrc_volume.c  bt_avrc_volume.h  bt_bd_addr_utils.c  bt_bd_addr_utils.h  bt_connection_settings.c  bt_connection_settings.h  bt_device_configuration.h  bt_device_manager.c  bt_device_manager.h  bt_device_preferences.c  bt_device_preferences.h  bt_gap.c  bt_gap.h  bt_init.c  bt_init.h  bt_utilities.c  bt_utilities.h  bt_work_dispatcher.c  bt_work_dispatcher.h  i2s_output.c  i2s_output.h
main/bt/utilities/: bt_a2d_utilities.c  bt_a2d_utilities.h  bt_avrc_utilities.c  bt_avrc_utilities.h  bt_bd_addr_utilities.c  bt_bd_addr_utilities.h  bt_gap_utilities.c  bt_gap_utilities.h
main/button/: button_init.c  button_init.h
main/configuration/: nvs_configuration.c  nvs_configuration.h
main/gpio/: gpio_init.c  gpio_init.h
main/leds/: led_animator.c  led_animator.h  led_effect.h  led_init.c  led_init.h  led_internals.c  led_internals.h  led_known_effects.h  progressive_reveal_effect.c  progressive_reveal_effect.h
openocd/interface/: ft2232hl-dual-channel-4-wires-jtag.cfg  (+1 more)
